2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/PajeTraceController.m; PajeSimulator/PajeSimul.m:
	  call missingChunk directly instead of thru a notification

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/Paje*Controller.[hm]: cleaned finalisation code

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/Paje.gorm: small changes in interface file

2006-11-02  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView.m: corrected trackingRect handling
        * SpaceTimeViewer/SpaceTime.gorm: corrected autosizing

2006-10-30  Benhur Stein <benhur@inf.ufsm.br>
        * EntityTypeFilter/EntityTypeSelector.m: indentation;
          removed unused code
        * General/ChunkArray.m,EntityChunk.m,PajeEvent.[hm],PajeType.[hm]:
          removed debug or unused code
        * SpaceTimeViewer/Shape.m: remove unused code
        * PajeEventDecoder/PajeEventDecoder.[hm]: removed unused code
        * PajeSimulator/PajeSimul.[hm],SimulChunk.m,UserLink.m,UserState.m:
          removed unused code
        * AggregatingFilter/AggregatingChunkArray.m: removed unused code
        * StorageController/Encapsulate.m: removed unused code
        * StorageController/*Aggreg*[hm]: removed files moved to
          AggregatingFilter/

2006-10-29  Benhur Stein <benhur@inf.ufsm.br>
	* */*: rewrote file reading and simulation for better speed.
          (events are kept pointing into original string from file;
          events cannot be retained anymore;
          fields are made into objects only when needed, by the simulator).
          new AggregatingFilter, with some code from StorageController;
          completed missing entity types (values); still needing some
          refactoring.
          made distinction between -value and -doubleValue for all entity types.

2006-10-29  Benhur Stein <benhur@inf.ufsm.br>
	* SpaceTimeDiagram/*: major overhaul in drawing code, mainly to
	  substitute PS functions by NSBezierPath.